--- a/orion/package.json
+++ b/orion/package.json
@@ -10,8 +10,9 @@
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.3",
     "debug": "~2.6.3",
-    "express": "~4.15.2",
     "ejs": "~2.5.6",
+    "express": "~4.15.2",
+    "express-ejs-layouts": "^2.3.0",
     "knex": "^0.12.9",
     "morgan": "~1.8.1",
     "objection": "^0.7.12",
